--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name: Rancher Documentation
 description: Documentation for Rancher
 
 
-URL: http://superseb.github.io/rancher.github.io
+URL: http://superseb.github.io
 baseurl: ""
 
 exclude: []
